added empty matrix

--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -574,6 +574,55 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 
 \section{Test Case-Requirement Traceability Matrix}
 
+\begin{table}[H]
+\centering
+\caption{Matrix to Match Tests to Functional Requirements}
+\label{my-label}
+\begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
+\hline
+\multicolumn{19}{|c|}{\textbf{Functional Requirement-Test Matrix}}                          \\ \hline
+ & \tiny{F1} & \tiny{F2} & \tiny{F3} & \tiny{F4} & \tiny{F5} & \tiny{F6} & \tiny{F7} & \tiny{F8} & \tiny{F9} & \tiny{F10} & \tiny{F11} & \tiny{F12} & \tiny{F13} & \tiny{F14} & \tiny{F15} & \tiny{F16} & \tiny{F17} & \tiny{F18} \\ \hline
+           &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & &  \\ \hline
+\end{tabular}
+\end{table}
+
+
+\begin{table}[H]
+\centering
+\caption{Matrix to Match Tests to Non-Functional Requirements}
+\label{my-label}
+\begin{tabular}{| l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l | l |}
+\hline
+\multicolumn{20}{|c|}{\textbf{Non-Functional Requirement-Test Matrix}}                          \\ \hline
+ & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS1} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline
+           &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &  \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &\\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+          &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
+\end{tabular}
+\end{table}
+
 \end{document}
 
 % Test Case Template
