--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -215,8 +215,75 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{center}
 
 \subsubsection{Shooting Model}
-\subsubsection{Data Storage}
-\subsubsection{User Interface}
+\subsubsection{Data Storage} %Sharon
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: DS1	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Sign Up Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage receives user name and password to sign up}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: user table updates with correct parameters}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: User table updated}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
+\end{tabular}
+\caption{Data Storage Sign Up Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: DS2	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Next Shot Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage returns a shot type for the system to execute}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: a specified desired zone the system must aim for is returned}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Desired zone id as an integer}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Return valid shot parameters, speed and angular velocity}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
+\end{tabular}
+\caption{Data Storage Next Shot Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: DS3	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Returned Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage received parameters for a successful or missed shot}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: returnrate table updates with correct parameters}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Timestamp, user and shot ids}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: returnrate table updated}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
+\end{tabular}
+\caption{Data Storage Returned Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: DS4	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{Data Storage Sign In Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Data Storage receives user name and password and authenticates it}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: Returns accurate boolean value according to matching of user name and password}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: MySQL database root active on port 3306}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: User name and user password}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: True is returned if the password matches the user name, false if they do not match}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
+\end{tabular}
+\caption{Data Storage Sign In Test}
+\end{table}
+\end{center}
+
+\subsubsection{User Interface} %Sharon
+
+
+
 \subsubsection{SmartServe}
 
 \begin{center}
