--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -281,7 +281,21 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{center}
 
 \subsubsection{User Interface} %Sharon
-
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: UI1	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{User Interface Start Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: Start button is pressed to start the training session}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: SmartServe must be told to begin the session with a click of this button}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: SmartServe communicating with UI}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: Mouse Event}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Session starts when button is clicked}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: ????}\\\hline
+\end{tabular}
+\caption{User Interface Start Test}
+\end{table}
+\end{center}
 
 
 \subsubsection{SmartServe}
