some process stuff

--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -607,7 +607,7 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \hline
 \multicolumn{20}{|c|}{\textbf{Non-Functional Requirement-Test Matrix}}                          \\ \hline
  & \tiny{LF1} & \tiny{UH1} & \tiny{UH2} & \tiny{P1} & \tiny{P2} & \tiny{P4} & \tiny{P5} & \tiny{OE2} & \tiny{MS1} & \tiny{MS2} & \tiny{S1} & \tiny{S2} & \tiny{P1} & \tiny{LC1} & \tiny{HS1} & \tiny{HS2} & \tiny{HS3} & \tiny{HS4} & \tiny{HS5} \\ \hline
-           &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &  \\ \hline
+T1 &  &  &  &  & X &  &  &  &  &  & X &  &  &  &  &  &  &  &  \\ \hline
           &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &  \\ \hline
           &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & &  \\ \hline
           &             &           &  &  &  &  &  &  &  &  &  &  &  &  &  &  & & & \\ \hline
