VV for ShootingModel

--- a/documentation/VandV/VandV.tex
+++ b/documentation/VandV/VandV.tex
@@ -215,6 +215,55 @@ The SmartServe system uses heavy computation power due to the CV and ML models, 
 \end{center}
 
 \subsubsection{Shooting Model}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: XXY	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{ShootingModel calculateYawAngle Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: The calculateYawAngle method returns an accurate yaw angle in degrees.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method returns an angle in degrees accurate to a whole number.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: xDist, yDist; distance to desired shot's x-coordinate and y-coordinate.}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: A yaw angle in degrees, accurate to a whole number.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{ShootingModel calculateYawAngle Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: XXY	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{ShootingModel calculateVelocity Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: The calculateVelocity method returns an accurate velocity in meters/second.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method returns the velocity accurate to a whole number.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: Velocity in m/s, accurate to a whole number.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{ShootingModel calculateVeolocty Test}
+\end{table}
+\end{center}
+
+\begin{center}
+\begin{table}[H]
+\begin{tabular}{|l r|}\hline&\\[-2mm]
+	Test ID: XXY	&Status: ????\\[-3mm]
+	\multicolumn{2}{|c|}{\textbf{\large{ShootingModel netHeightChecker Test}}}\\&\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Description: ThenetHeightChecker method checks whether the desired shot will pass over the net.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pass/Fail Condition: The method returns the correct boolean indicating if the shot will pass over the net.}\\[1mm]\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Pre-Conditions: N/A}\\[4mm]
+	\multicolumn{2}{|p{\textwidth}|}{Input: N/A.}\\[2mm]\hline
+	\multicolumn{1}{|p{0.49\textwidth}}{Expected Results: A boolean; True is shot will pass over the net, False otherwise.}	&\multicolumn{1}{|p{0.45\textwidth}|}{Actual Results: ????}\\\hline&\\[-3mm]
+	\multicolumn{2}{|p{\textwidth}|}{Post-Conditions: N/A}\\\hline
+\end{tabular}
+\caption{ShootingModel netHeightChecker Test}
+\end{table}
+\end{center}
+
 \subsubsection{Data Storage}
 \subsubsection{User Interface}
 \subsubsection{SmartServe}
